# lambda-config-injector

./: Cargo.toml  README.md
examples/secret-injection-demo/: .gitignore  README.md  template.yaml
examples/secret-injection-demo/hello_world/: app.py
examples/secret-injection-demo/layer/: Makefile  bootstrap
src/: main.rs
