[package]
name = "lambda-secrets-injector"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.17", features = ["derive"] }
env_logger = "0.8.3"
log = "0.4.14"
regex = "1.5.5"
aws-config = "0.11.0"
aws-sdk-secretsmanager = "0.11.0"
tokio = { version = "1.18.5", features = ["full"] }
serde_json = "1.0.81"

[profile.release]
strip = true
